[BPS-63]Fixed issue manage dish on mobile

--- a/client/Components/dishes_selection/dishes_selection.css
+++ b/client/Components/dishes_selection/dishes_selection.css
@@ -2,3 +2,10 @@
   width: 50px;
   height: 50px;
 }
+
+/*small desktops */
+@media (max-width: 991px) {
+  [type="checkbox"] + label {
+    height: auto;
+  }
+}
